# vendor_bearpi

./: README_zh.md
bearpi_hm_micro/: BUILD.gn  config.json  fs.yml  ohos.build
bearpi_hm_micro/ace_lite_config/: product_acelite_config.h
bearpi_hm_micro/graphic_config/: product_graphic_lite_config.h
bearpi_hm_micro/hals/security/permission_lite/: hal_pms.c
bearpi_hm_micro/hals/security/permission_lite/ipc_auth/include/: policy_preset_product.h
bearpi_hm_micro/hals/utils/sys_param/: hal_sys_param.c  vendor.para
bearpi_hm_micro/hals/utils/token/: hal_token.c
bearpi_hm_micro/hdf_config/: hdf.hcs
bearpi_hm_micro/hdf_config/device_info/: device_info.hcs
bearpi_hm_micro/hdf_config/hdf_test/: adc_test_config.hcs  emmc_test_config.hcs  gpio_test_config.hcs  hdf_test.hcs  i2c_test_config.hcs  uart_test_config.hcs
bearpi_hm_micro/hdf_config/hdf_test/hdf_test_manager/: device_info.hcs
bearpi_hm_micro/hdf_config/input/: input_config.hcs
bearpi_hm_micro/hdf_config/ltdc/: ltdc_config.hcs
bearpi_hm_micro/hdf_config/wifi/: wlan_platform.hcs
bearpi_hm_micro/init_configs/: BUILD.gn  init_bearpi_hm_micro.cfg  init_bearpi_hm_micro_mksh.cfg
bearpi_hm_micro/kernel_configs/: debug_tee.config
bearpi_hm_nano/: BUILD.gn  config.json
bearpi_hm_nano/hals/utils/sys_param/: BUILD.gn  hal_sys_param.c
