# Copyright (c) 2021 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

group("bearpi_hm_micro") {
  deps = [
    ":build_stm32_image",
    "init_configs:init_configs",
    "init_configs:init_configs_mksh",
  ]
}

build_ext_component("build_stm32_image") {
  deps = [ "//kernel/liteos_a:copy_liteos" ]
  exec_path = rebase_path(root_out_dir)
  objcopy = "${compile_prefix}objcopy$toolchain_cmd_suffix"
  objdump = "${compile_prefix}objdump$toolchain_cmd_suffix"
  command = "$objcopy -O binary OHOS_Image OHOS_Image.bin"
  command += " && sh -c '$objdump -t OHOS_Image | sort >OHOS_Image.sym.sorted'"
  command += " && sh -c 'mkimage -A arm  -T kernel -C none -a 0xC0100000 -e 0xC0100000 -n liteos-a -d OHOS_Image.bin OHOS_Image.stm32' "
}
